--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -144,3 +144,24 @@ button {
 figure {
   margin: 0;
 }
+
+/* PAGE TRANSITIONS */
+
+.page-enter-active,
+.page-leave-active {
+  transition-property: opacity;
+  transition-duration: 0.4s;
+  transition-timing-function: ease-in-out;
+}
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+}
+
+@media screen and (prefers-reduced-motion: reduce), (update: slow) {
+  * {
+    animation-duration: 0.001ms !important;
+    animation-iteration-count: 1 !important; /* Hat tip Nick/cssremedy (https://css-tricks.com/revisiting-prefers-reduced-motion-the-reduced-motion-media-query/#comment-1700170) */
+    transition-duration: 0.001ms !important;
+  }
+}
