--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
   font-family: 'Roboto';
   font-weight: normal;
@@ -29,120 +33,6 @@
   font-display: swap;
   src: url('../fonts/Poppins-Bold.woff2') format('woff2'),
     url('../fonts/Poppins-Bold.ttf') format('truetype');
-}
-
-:root {
-  --colorPrimary: rgb(156, 195, 23);
-  --colorSecondary: white;
-  --colorNeutral100: #fff0eb;
-  --colorTextDefault: #323335;
-  --colorWhite: white;
-  --widthContentMax: 860px;
-}
-
-@media screen and (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.001ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.001ms !important;
-  }
-}
-
-@media screen and (min-width: 960px) {
-  html {
-    font-size: 20px;
-  }
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
-    Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-}
-
-body {
-  min-height: 100vh;
-  background-color: var(--colorWhite);
-  color: var(--colorTextDefault);
-}
-
-body > main {
-  grid-row: 2;
-}
-
-body > main > div:first-of-type {
-  padding-top: 120px;
-}
-
-body > footer {
-  grid-row: 3;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: Poppins, Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Helvetica, Arial, sans-serif;
-  margin-top: 0;
-}
-
-h2 {
-  font-size: clamp(24px, 5vw, 36px);
-}
-
-p,
-ul,
-ol {
-  line-height: 1.6;
-}
-
-a[href],
-a[href]:visited {
-  color: var(--colorTextDefault);
-  text-decoration: underline;
-}
-
-form {
-  display: grid;
-  padding: 2em 0;
-}
-
-input,
-textarea,
-button {
-  width: 100%;
-  padding: 1em;
-  margin-bottom: 1em;
-  font-size: 1rem;
-  font-family: 'Avenir', 'Avenir Next', sans-serif;
-}
-
-input,
-textarea {
-  border: 1px solid black;
-}
-
-button {
-  border: 1px solid var(--primary);
-  background-color: var(--primary);
-  color: var(--secondary);
-  cursor: pointer;
-}
-
-figure {
-  margin: 0;
 }
 
 /* PAGE TRANSITIONS */
