--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2262,6 +2262,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0.8;
 }
 
+.disabled\:bg-fuchsia-500:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 70 239 / var(--tw-bg-opacity));
+}
+
 .group:hover .group-hover\:text-vsp-500 {
   --tw-text-opacity: 1;
   color: rgb(156 195 23 / var(--tw-text-opacity));
