--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1349,6 +1349,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.25rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .mt-32 {
   margin-top: 8rem;
 }
@@ -1359,10 +1363,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-4 {
   margin-bottom: 1rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 
 .mb-12 {
@@ -1411,10 +1411,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-full {
   height: 100%;
-}
-
-.h-4 {
-  height: 1rem;
 }
 
 .h-\[400px\] {
@@ -1485,10 +1481,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 80%;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
 .w-screen {
   width: 100vw;
 }
@@ -1509,16 +1501,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 32rem;
 }
 
+.max-w-7xl {
+  max-width: 80rem;
+}
+
 .max-w-none {
   max-width: none;
 }
 
 .max-w-\[300px\] {
   max-width: 300px;
-}
-
-.max-w-7xl {
-  max-width: 80rem;
 }
 
 .max-w-6xl {
@@ -1881,11 +1873,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 0.25rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1894,6 +1881,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .py-16 {
@@ -2009,6 +2001,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-vsp-900 {
   --tw-text-opacity: 1;
   color: rgb(80 100 12 / var(--tw-text-opacity));
+}
+
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2262,6 +2259,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0.8;
 }
 
+.disabled\:pointer-events-none:disabled {
+  pointer-events: none;
+}
+
+.disabled\:bg-vsp-200:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 242 146 / var(--tw-bg-opacity));
+}
+
 .group:hover .group-hover\:text-vsp-500 {
   --tw-text-opacity: 1;
   color: rgb(156 195 23 / var(--tw-text-opacity));
@@ -2285,9 +2291,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.peer:checked ~ .peer-checked\:text-fuchsia-500 {
-  --tw-text-opacity: 1;
-  color: rgb(217 70 239 / var(--tw-text-opacity));
+.peer:disabled ~ .peer-disabled\:pointer-events-none {
+  pointer-events: none;
+}
+
+.peer:disabled ~ .peer-disabled\:cursor-default {
+  cursor: default;
+}
+
+.peer:disabled ~ .peer-disabled\:opacity-40 {
+  opacity: 0.4;
 }
 
 .prose-headings\:font-headline :is(:where(h1, h2, h3, h4, th):not(:where([class~="not-prose"] *))) {
