--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1337,6 +1337,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1rem;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
 }
@@ -1367,6 +1372,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .ml-auto {
   margin-left: auto;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .block {
@@ -1423,6 +1432,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-12 {
   height: 3rem;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .max-h-40 {
@@ -1487,6 +1500,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-12 {
   width: 3rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .min-w-\[310px\] {
@@ -1969,6 +1986,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 600;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 .italic {
   font-style: italic;
 }
@@ -2204,6 +2225,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:bg-vsp-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(194 233 68 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-vsp-500:hover {
@@ -2623,6 +2649,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:mr-1 {
     margin-right: 0.25rem;
+  }
+
+  .lg\:mr-4 {
+    margin-right: 1rem;
   }
 
   .lg\:inline-block {
