--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1779,6 +1779,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 90vw;
 }
 
+.max-w-\[100px\] {
+  max-width: 100px;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
