chore: better catch boundary + response on unused tag
refs #118

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1628,6 +1628,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: auto;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .block {
   display: block;
 }
