--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,7 +6,8 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/Roboto-Regular.woff2") format("woff2"),
+  src:
+    url("/fonts/Roboto-Regular.woff2") format("woff2"),
     url("/fonts/Roboto-Regular.ttf") format("truetype");
 }
 @font-face {
@@ -14,7 +15,8 @@
   font-weight: bold;
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/Roboto-Bold.woff2") format("woff2"),
+  src:
+    url("/fonts/Roboto-Bold.woff2") format("woff2"),
     url("/fonts/Roboto-Bold.ttf") format("truetype");
 }
 @font-face {
@@ -22,7 +24,8 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/Poppins-Regular.woff2") format("woff2"),
+  src:
+    url("/fonts/Poppins-Regular.woff2") format("woff2"),
     url("/fonts/Poppins-Regular.ttf") format("truetype");
 }
 @font-face {
@@ -30,7 +33,8 @@
   font-weight: bold;
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/Poppins-Bold.woff2") format("woff2"),
+  src:
+    url("/fonts/Poppins-Bold.woff2") format("woff2"),
     url("/fonts/Poppins-Bold.ttf") format("truetype");
 }
 
